--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -68,7 +68,7 @@ h1, h2, h3, h4, h5 {
 
 
 /* FONT SET */
-html, body {
+/* html, body {
 	font-family: 'Rajdhani', sans-serif;
 }
 h1 {
@@ -78,7 +78,7 @@ h1 {
 h2, h3, h4, h5, h6 {
 	font-family: 'Raleway', sans-serif;
 	font-weight: 500;
-}
+} */
 
 /* BODY */
 body {
@@ -210,4 +210,73 @@ footer {
 	font-size: 14px;
 	padding-bottom: 80px;
 	text-align: center;
+}
+
+
+
+/* SERVICES PAGE STYLING */
+#services-header {
+	flex-flow: row wrap;
+	padding: 0;
+}
+#services-header img {
+	width: 100%;
+}
+#services-header section {
+	padding: 50px 0;
+}
+#services-header section h1 {
+	font-size: 32px;
+}
+
+#services-content {
+	display: flex;
+	justify-content: space-between;
+	flex-flow: row wrap;
+	padding: 25px 0;
+	border-bottom: 1px solid black;
+}
+#services-content section {
+	width: 47%;
+	padding: 25px;
+	margin: 25px 0;
+	background-color: #eeeeee;
+}
+#services-content section button {
+	background-color: white;
+	border: 1px solid black;
+	color: black;
+	font-size: 18px;
+	font-weight: 500;
+	margin-top: 10px;
+	padding: 5px 40px;
+	transition:
+		background .25s ease-in-out,
+		padding .25s ease-in-out;
+}
+#services-content section button:hover {
+	background: #dddddd;
+	padding: 5px 55px; 
+}
+
+#services-facts {
+	margin: 50px 0;
+	display: flex;
+	justify-content: space-between;
+}
+#services-facts section {
+	width: 50%;
+}
+#services-facts p {
+	margin: 25px 0;
+}
+#services-facts ul {
+	list-style: square;
+	list-style-position: inside
+}
+#services-facts ul li {
+	margin: 10px;
+}
+#services-facts img {
+	width: 47%;
 }
