--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -71,6 +71,8 @@ h1, h2, h3, h4, h5 {
 body {
 	width: 876px;
 	margin: 0 auto;
+}
+#flex-wrap {
 	display: flex;
 	flex-flow: column nowrap;
 	align-items: center;
@@ -206,7 +208,7 @@ footer {
 	width: 100%;
 }
 #services-header section {
-	padding: 50px 0;
+	padding-top: 50px;
 }
 #services-header section h1 {
 	font-size: 32px;
